<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#427DE4"

    tools:context=".signup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"


                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/fname"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:hint="@string/full_name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/phnumber"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/phone_number"
                android:padding="8dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/usernamereg"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/usernameu"
                android:padding="8dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/passwordreg"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/signupButton"
                android:text="@string/sighup"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#000"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_an_user_login"
                android:gravity="center"
                android:id="@+id/lgReTxt"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"


                />



        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>