<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#427DE4"
    android:orientation="vertical"
    tools:context=".Home_f">

    <HorizontalScrollView
        android:id="@+id/horibar"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="none"
        android:contentDescription="@string/apkahorime"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"

                app:cardElevation="50sp"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/posterss"
                    android:scaleType="fitXY"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"

                app:cardElevation="50sp"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/posters"
                    android:scaleType="fitXY"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"

                app:cardElevation="50sp"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/poster"
                    android:scaleType="fitXY"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"

                app:cardElevation="50sp"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/postersss"
                    android:scaleType="fitXY"

                    />

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </HorizontalScrollView>



    <Button
        android:id="@+id/addac"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#fff"
        android:text="@string/add_account"
        android:textSize="18sp"
        android:textColor="#000"
        app:cornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"


        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/horisc1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/addac"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="none"
        android:contentDescription="apkahori
"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20sp"
        android:id="@+id/cr1"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/school"
            android:scaleType="fitXY"
            android:id="@+id/im1"
            android:clickable="true"
            android:contentDescription="no"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20sp"
        android:id="@+id/cr2"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/credit"
            android:scaleType="fitXY"
            android:id="@+id/im2"
            android:clickable="true"
            android:contentDescription="no"

            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20sp"
        android:id="@+id/cr3"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/lone"
            android:scaleType="fitXY"
            android:id="@+id/im3"
            android:clickable="true"
            android:contentDescription="@string/no"

            android:focusable="true" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20sp"
        android:id="@+id/cr4"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/machine"
            android:scaleType="fitXY"
            android:id="@+id/im4"
            android:clickable="true"
            android:contentDescription="@string/no"

            android:focusable="true" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20sp"
        android:id="@+id/cr5"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/atm"
            android:scaleType="fitXY"
            android:id="@+id/im5"
            android:clickable="true"
            android:contentDescription="@string/no"

            android:focusable="true" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20sp"
        android:id="@+id/cr6"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sharemoney"
            android:scaleType="fitXY"
            android:id="@+id/im6"
            android:clickable="true"
            android:contentDescription="@string/no"

            />
    </androidx.cardview.widget.CardView>
</LinearLayout>


    </HorizontalScrollView>





    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/horisc2"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/horisc1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="none"
        android:contentDescription="apkahori"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="20sp"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dollar"
                    android:scaleType="fitXY"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="20sp"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pound"
                    android:scaleType="fitXY"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="20sp"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/caneda"
                    android:scaleType="fitXY"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="20sp"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/aus"
                    android:scaleType="fitXY"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </HorizontalScrollView>









</androidx.constraintlayout.widget.ConstraintLayout>